# oxideav-qoi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: fuzz.yml
benches/: decode.rs  encode.rs  op_walk.rs  op_write.rs  reuse.rs  roundtrip.rs
examples/: profile_qoi.rs
fuzz/: Cargo.toml
fuzz/corpus/decode/: regression-huge-header-1tb
fuzz/fuzz_targets/: chunk_walk.rs  decode.rs  encode_roundtrip.rs  into_equiv.rs  op_iter.rs  op_write.rs  trait_decode.rs
profile/: README.md
src/: decoder.rs  encoder.rs  error.rs  image.rs  lib.rs  ops.rs  registry.rs
tests/: canonical_encoding.rs  decoder_boundary.rs  decoder_rejects.rs  into_equivalence.rs  property_sweep.rs  reference_fixtures.rs
