[package]
name = "oxideav-qoi"
version = "0.1.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-qoi"
homepage = "https://github.com/OxideAV/oxideav-qoi"
authors = ["Mark Karpeles"]
description = "Pure-Rust QOI (Quite OK Image) reader and writer for the oxideav framework — clean-room implementation of the qoiformat.org one-page specification"
readme = "README.md"
keywords = ["multimedia", "image", "qoi", "codec", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::images"]

[dependencies]
# `oxideav-core` is gated behind the default-on `registry` feature so
# image-library consumers can depend on `oxideav-qoi` with
# `default-features = false` and avoid the framework dependency tree
# entirely. Without `registry` the crate exposes the standalone
# `parse_qoi` / `encode_qoi` API plus crate-local `QoiImage` /
# `QoiError` / `QoiChannels` / `QoiColorspace` types and never
# references `oxideav-core`.
oxideav-core = { version = "0.1", optional = true }

[features]
default = ["registry"]

# Wires up the codec / encoder / decoder trait implementations against
# `oxideav-core` so the crate can plug into the `oxideav` framework
# registry. Default-on; turn off for image-library use-cases that just
# want the standalone `parse_qoi` API.
registry = ["dep:oxideav-core"]

[dev-dependencies]
# Round 156 (depth-mode benchmarks): Criterion drives the three bench
# harnesses (`decode`, `encode`, `roundtrip`) that future QOI encoder /
# decoder rounds can use to A/B their changes. Pinned to the same 0.5
# line the other OxideAV crates with benches (bmp, png, cinepak, tta,
# flac) already track.
criterion = "0.5"

# Round 156 benches. Each binary lives in `benches/<name>.rs` and is
# self-contained (no committed fixture files — the benches synthesise
# inputs on the fly with the public encoder API). Run with:
#     cargo bench -p oxideav-qoi --bench <name>
[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "roundtrip"
harness = false
