[package]
name = "oxideav-qoi"
version = "0.1.5"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-qoi"
homepage = "https://github.com/OxideAV/oxideav-qoi"
authors = ["Mark Karpeles"]
description = "Pure-Rust QOI (Quite OK Image) reader and writer for the oxideav framework — clean-room implementation of the qoiformat.org one-page specification"
readme = "README.md"
keywords = ["multimedia", "image", "qoi", "codec", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::images"]

[dependencies]
# `oxideav-core` is gated behind the default-on `registry` feature so
# image-library consumers can depend on `oxideav-qoi` with
# `default-features = false` and avoid the framework dependency tree
# entirely. Without `registry` the crate exposes the standalone
# `parse_qoi` / `encode_qoi` API plus crate-local `QoiImage` /
# `QoiError` / `QoiChannels` / `QoiColorspace` types and never
# references `oxideav-core`.
oxideav-core = { version = "0.1", optional = true }

[features]
default = ["registry"]

# Wires up the codec / encoder / decoder trait implementations against
# `oxideav-core` so the crate can plug into the `oxideav` framework
# registry. Default-on; turn off for image-library use-cases that just
# want the standalone `parse_qoi` API.
registry = ["dep:oxideav-core"]

[dev-dependencies]
# Round 156 (depth-mode benchmarks): Criterion drives the three bench
# harnesses (`decode`, `encode`, `roundtrip`) that future QOI encoder /
# decoder rounds can use to A/B their changes. Pinned to the same 0.5
# line the other OxideAV crates with benches (bmp, png, cinepak, tta,
# flac) already track.
criterion = "0.5"

# Round 156 benches. Each binary lives in `benches/<name>.rs` and is
# self-contained (no committed fixture files — the benches synthesise
# inputs on the fly with the public encoder API). Run with:
#     cargo bench -p oxideav-qoi --bench <name>
[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "roundtrip"
harness = false

# Round 225 (depth-mode reuse-API): A/B the new buffer-reuse
# `_into` variants against the allocating `encode_qoi` /
# `parse_qoi` wrappers on a tight 256-call inner loop over a
# small (4×4 RGBA) image — the exact workload that motivated the
# `_into` surface (image servers, thumbnail batches, encode-loop
# converters).
[[bench]]
name = "reuse"
harness = false

# Round 318 (depth-mode bench): the streaming chunk-walk decode path
# (`iter_ops` / `iter_ops_strict`) had fuzz + contract-test coverage
# but no benchmark. This driver walks the chunk stream into typed
# `QoiOp`s without materialising a pixel buffer, mirroring the `decode`
# bench's five image shapes so an `op_walk` row lines up against the
# matching `decode` row (op-dispatch cost vs. full pixel decode).
[[bench]]
name = "op_walk"
harness = false

# Round 332 (depth-mode bench): the chunk re-serialization path
# (`QoiOp::write_to`) — the byte-level inverse of the `op_walk`
# chunk walker — had `op_write` fuzz + write-contract test coverage
# but no benchmark. This driver pre-collects the op list per shape,
# then times re-emitting each op's on-wire chunk into a reused (and a
# fresh) output buffer, mirroring `op_walk`'s five shapes so an
# `op_write` row lines up against the matching `op_walk` row.
[[bench]]
name = "op_write"
harness = false

# Round 175 (depth-mode profiling): flat measure-this-thing driver
# for `samply` / `cargo flamegraph` / `perf record`. Mirrors the
# `benches/*.rs` scenarios byte-for-byte so a profile capture
# corresponds to the bench rows. Standalone (`registry`-feature off)
# is fine — the driver only uses `encode_qoi` / `parse_qoi`.
[[example]]
name = "profile_qoi"
path = "examples/profile_qoi.rs"
