[package]
name = "oxideav-qoi-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# QOI's surface is small but has three distinct fuzz contracts. The
# decoder is a linear pass over a 14-byte header + 1- to 5-byte chunks
# + 8-byte end marker that must always return a `Result` rather than
# panicking / aborting / OOMing on attacker-supplied bytes. The
# encoder + decoder pair forms a lossless roundtrip: parse(encode(px))
# must equal px for every well-formed pixel input. The third target
# wraps a fuzzer-supplied chunk stream in a *valid* synthesised header
# + end marker so coverage feedback concentrates on the QOI_OP chunk
# walker (RGB / RGBA / INDEX / DIFF / LUMA / RUN + truncation) instead
# of the header guards the `decode` target already saturates. The
# targets cover those contracts independently — no external oracle is
# pulled in; expectations come from the QOI spec only.
[dependencies]
libfuzzer-sys = "0.4"

[dependencies.oxideav-qoi]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false

# Second target — encode → decode lossless roundtrip. The first 6
# fuzz bytes pick the image shape (width / height clamped to 1..=256,
# channels ∈ {3,4}, colorspace ∈ {0,1}); the rest are pixel bytes
# (repeated to fill `w*h*channels`). The target asserts
# `parse_qoi(encode_qoi_full(...)) == (w, h, channels, colorspace,
# pixels)` — any drift between the encoder's chunk-selection order
# (RUN > INDEX > DIFF > LUMA > RGB / RGBA) and the decoder's chunk
# walker breaks this contract.
[[bin]]
name = "encode_roundtrip"
path = "fuzz_targets/encode_roundtrip.rs"
test = false
doc = false

# Third target — structure-aware chunk walk. The first 6 fuzz bytes
# pick a *valid* header shape (width / height clamped 1..=64, channels
# ∈ {3,4}, colorspace ∈ {0,1}); the rest is fed verbatim as the raw
# QOI_OP chunk stream between header and end marker. This keeps the
# fuzzer past the header / magic / end-marker guards so coverage bites
# on the chunk dispatcher and the `iter_ops` / `iter_ops_strict`
# walkers, the `parse_qoi_into` buffer-reuse path, and the per-op
# `tag()` / `body_len()` / `encoded_len()` invariants — surface the
# `decode` and `encode_roundtrip` targets don't drive directly.
[[bin]]
name = "chunk_walk"
path = "fuzz_targets/chunk_walk.rs"
test = false
doc = false
