[package]
name = "oxideav-qoi-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# QOI's surface is small but has three distinct fuzz contracts, each
# derived from the qoiformat.org specification. The decoder is a linear
# pass over a 14-byte header + 1- to 5-byte chunks + 8-byte end marker
# that must always return a `Result` rather than panicking / aborting /
# OOMing on attacker-supplied bytes. The encoder + decoder pair forms a
# lossless roundtrip: parse(encode(px)) must equal px for every
# well-formed pixel input. The `chunk_walk` target is structure-aware:
# it synthesizes a spec-valid header + end marker and fuzzes only the
# chunk stream between them, concentrating libfuzzer's budget on the
# per-op decode dispatch (RGB / RGBA / INDEX / DIFF / LUMA / RUN).
[dependencies]
libfuzzer-sys = "0.4"

[dependencies.oxideav-qoi]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false

# Second target — encode → decode lossless roundtrip. The first 6
# fuzz bytes pick the image shape (width / height clamped to 1..=256,
# channels ∈ {3,4}, colorspace ∈ {0,1}); the rest are pixel bytes
# (repeated to fill `w*h*channels`). The target asserts
# `parse_qoi(encode_qoi_full(...)) == (w, h, channels, colorspace,
# pixels)` — any drift between the encoder's chunk-selection order
# (RUN > INDEX > DIFF > LUMA > RGB / RGBA) and the decoder's chunk
# walker breaks this contract.
[[bin]]
name = "encode_roundtrip"
path = "fuzz_targets/encode_roundtrip.rs"
test = false
doc = false

# Third target — structure-aware chunk-stream walk. The first 6 fuzz
# bytes pick a spec-valid header shape (width / height clamped to
# 1..=256, channels ∈ {3,4}, colorspace ∈ {0,1}); the remaining bytes
# become the raw chunk stream, wrapped with a correct 14-byte header
# and trailing 8-byte end marker. This keeps the decoder past the
# header gate on (nearly) every iteration so the fuzzer spends its
# budget on the six per-op decode paths and the truncation / overrun
# checks between them, rather than rediscovering the `qoif` magic. The
# only contract asserted is that `parse_qoi` returns — Ok or Err, never
# a panic / abort / OOM.
[[bin]]
name = "chunk_walk"
path = "fuzz_targets/chunk_walk.rs"
test = false
doc = false

# Fourth target — structure-aware fuzz of the stream-level chunk
# iterator (`iter_ops` / `iter_ops_strict`), a separate decode path from
# `parse_qoi`: it walks chunks into typed `QoiOp`s without materialising
# a pixel buffer. The first 6 fuzz bytes pick a spec-valid header shape;
# the rest become the chunk stream wrapped with a correct 14-byte header
# and 8-byte end marker. Asserts the walker returns / never panics, the
# `encoded_len() == 1 + body_len()` width identity holds, `tag()` is
# total and reconstructs the leading byte for every non-truncated op,
# consumed-byte accounting is exact, and `iter_ops_strict` agrees with
# the non-strict walk on the truncation boundary.
[[bin]]
name = "op_iter"
path = "fuzz_targets/op_iter.rs"
test = false
doc = false
