[package]
name = "oxideav-qoi-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# QOI's surface is small but has three distinct fuzz contracts, each
# derived from the qoiformat.org specification. The decoder is a linear
# pass over a 14-byte header + 1- to 5-byte chunks + 8-byte end marker
# that must always return a `Result` rather than panicking / aborting /
# OOMing on attacker-supplied bytes. The encoder + decoder pair forms a
# lossless roundtrip: parse(encode(px)) must equal px for every
# well-formed pixel input. The `chunk_walk` target is structure-aware:
# it synthesizes a spec-valid header + end marker and fuzzes only the
# chunk stream between them, concentrating libfuzzer's budget on the
# per-op decode dispatch (RGB / RGBA / INDEX / DIFF / LUMA / RUN).
[dependencies]
libfuzzer-sys = "0.4"
# The trait_decode target drives the framework-side Decoder trait
# (send_packet / receive_frame / receive_arena_frame), so it names
# oxideav_core types directly. This is a non-published fuzz harness
# (publish = false), not a library consumer, so a direct framework dep
# does not create the publish-lockstep coupling the workspace bans for
# library dev-deps.
oxideav-core = "0.1"

[dependencies.oxideav-qoi]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false

# Second target — encode → decode lossless roundtrip. The first 6
# fuzz bytes pick the image shape (width / height clamped to 1..=256,
# channels ∈ {3,4}, colorspace ∈ {0,1}); the rest are pixel bytes
# (repeated to fill `w*h*channels`). The target asserts
# `parse_qoi(encode_qoi_full(...)) == (w, h, channels, colorspace,
# pixels)` — any drift between the encoder's chunk-selection order
# (RUN > INDEX > DIFF > LUMA > RGB / RGBA) and the decoder's chunk
# walker breaks this contract.
[[bin]]
name = "encode_roundtrip"
path = "fuzz_targets/encode_roundtrip.rs"
test = false
doc = false

# Third target — structure-aware chunk-stream walk. The first 6 fuzz
# bytes pick a spec-valid header shape (width / height clamped to
# 1..=256, channels ∈ {3,4}, colorspace ∈ {0,1}); the remaining bytes
# become the raw chunk stream, wrapped with a correct 14-byte header
# and trailing 8-byte end marker. This keeps the decoder past the
# header gate on (nearly) every iteration so the fuzzer spends its
# budget on the six per-op decode paths and the truncation / overrun
# checks between them, rather than rediscovering the `qoif` magic. The
# only contract asserted is that `parse_qoi` returns — Ok or Err, never
# a panic / abort / OOM.
[[bin]]
name = "chunk_walk"
path = "fuzz_targets/chunk_walk.rs"
test = false
doc = false

# Fourth target — structure-aware fuzz of the stream-level chunk
# iterator (`iter_ops` / `iter_ops_strict`), a separate decode path from
# `parse_qoi`: it walks chunks into typed `QoiOp`s without materialising
# a pixel buffer. The first 6 fuzz bytes pick a spec-valid header shape;
# the rest become the chunk stream wrapped with a correct 14-byte header
# and 8-byte end marker. Asserts the walker returns / never panics, the
# `encoded_len() == 1 + body_len()` width identity holds, `tag()` is
# total and reconstructs the leading byte for every non-truncated op,
# consumed-byte accounting is exact, and `iter_ops_strict` agrees with
# the non-strict walk on the truncation boundary.
[[bin]]
name = "op_iter"
path = "fuzz_targets/op_iter.rs"
test = false
doc = false

# Fifth target — structure-aware fuzz of `QoiOp::write_to`, the byte-level
# inverse of the `iter_ops` chunk walker. The first 6 fuzz bytes pick a
# spec-valid header shape; the rest become the chunk stream wrapped with a
# correct 14-byte header and 8-byte end marker. Each op the walker yields
# is re-serialized via `write_to`; the target asserts each write appends
# exactly `encoded_len()` bytes, a clean walk's rebuilt chunk section
# equals the original byte-for-byte (and re-walks to the same op
# sequence), and a truncated walk's rebuilt buffer is a byte-prefix of the
# original (the `Truncated` sentinel re-emits only its lone leading byte).
[[bin]]
name = "op_write"
path = "fuzz_targets/op_write.rs"
test = false
doc = false

# Sixth target — structure-aware fuzz of the framework-side Decoder
# trait path (oxideav_core::Decoder), distinct from the standalone
# parse_qoi the other targets hit. The first 6 fuzz bytes pick a
# spec-valid header shape; the rest become the chunk stream wrapped with
# a correct header + end marker, fed to the decoder as a Packet. The
# target drives BOTH receive_frame (heap VideoFrame) and
# receive_arena_frame (zero-copy arena Frame with the QOI-overridden
# FrameHeader), asserting neither panics / aborts / OOMs and that — when
# both succeed on the same stream — they agree on the decoded pixel
# bytes, the plane stride, and the frame dimensions.
[[bin]]
name = "trait_decode"
path = "fuzz_targets/trait_decode.rs"
test = false
doc = false

# Seventh target — differential fuzz of the caller-owned buffer-reuse
# `_into` API (parse_qoi_into / encode_qoi_full_into) against the
# allocating wrappers (parse_qoi / encode_qoi_full). The first 6 fuzz
# bytes pick a spec-valid header shape; the rest become the chunk stream
# wrapped with a correct header + end marker. The decode is run through
# both entry points (the `_into` one into a persistent, pre-dirtied,
# reused buffer) and asserted to agree on accept/reject + pixels +
# header; when the decode succeeds, the recovered pixels are re-encoded
# through both encode entry points and asserted byte-identical. The
# reuse buffers persist across iterations via thread_local, so the
# `_into` path continuously sees a previous differently-sized image —
# the shrinking-reuse stale-tail surface driven by attacker-chosen
# sizes + op mixes.
[[bin]]
name = "into_equiv"
path = "fuzz_targets/into_equiv.rs"
test = false
doc = false
